# answers-script

./: .gitignore  .gitmodules  CHANGELOG.md  ChangeLog.md  LICENSE  README.md  answers-script.cabal  cabal.project  default.nix  flake.nix  package.yaml  shell.nix  stack.yaml
.github/workflows/: main.yml
answers-script/: answers-script.cabal
answers-script/test/src/: h.html  q.md
answers-script/test/src/some book/: author.txt  q.md
app/: Main.hs
nix/: hix.nix  sources.json
src/: Lib.hs  MatlabMark.hs  MyGit.hs  MyGitHub.hs  MyLib.hs  MyMark.hs  Util.hs
test/: Main.hs  Spec.hs  matlab-short.md
test/expect/resources/2aed5404c83f7a46aa249e0a6328af756b19d513/: q.md.html
test/expect/resources/3e8d61043ed9bdb6b3cd4f197f0203bbdcb13db1/: a.md.html  q.md.html
test/expect/resources/b018428b6f02cdaa399c4860f9e7808d9ffc9d16/: q.md.html
test/expect/resources/c4ad78b11338182da6d1e6b792987c7319ef55d8/: a.md.html  q.md.html
test/expect/resources/ebe52014d6aaf02a4ddeaa7de59a014eac6634b8/: a.md.html  q.md.html
test/matlab-expect/: cover.md
test/matlab-expect/11.1/: a.md
test/matlab-expect/11.27/: a.md
test/matlab-expect/11.31/: a.md
test/matlab-expect/11.9/: a.md
test/src/.hidden/: hidden.html  hidden.md
test/src/some book/chapter 1/: a.md  q.md
test/src/some book/chapter2/: a.md  q.md
