cabal-version:      3.0
name:               answers-script
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Ingun Jon
maintainer:         ingun37@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Lib, MyGit

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.16.4.0, 
        aeson,
        hlibgit2,
        containers,
        lens,
        cryptohash-sha1,
        directory,
        directory-tree,
        pandoc,
        pcre-heavy,
        pcre-light,
        filepath,
        text,
        bytestring,
        base16-bytestring,
        aeson-pretty
    hs-source-dirs:   src
    default-language: Haskell2010
    
executable answers-script
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        answers-script,
        optparse-applicative

    hs-source-dirs:   app
    default-language: Haskell2010

Test-Suite test
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    build-depends:
        base ^>=4.16.4.0,
        answers-script,
        hspec,
        QuickCheck,
        directory,
        filepath,
        bytestring,
        directory-tree